HUE-6077 [frontend] Fix top navbar button alignment

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -84,6 +84,7 @@ body {
 
 .top-nav-right {
   .flex(0 0 300px);
+  padding-right: 10px;
 }
 
 .jobs-panel {
@@ -161,12 +162,12 @@ body {
 .compose-action .btn:first-child {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
-  padding-bottom: 2px;
+  padding-right: 2px;
   box-shadow: none;
 }
 
 .compose-action .btn:last-of-type:not(:first-child) {
-  padding-left: 1px;
+  padding-left: 4px;
 }
 
 .compose-action .btn:last-of-type {
